1998-10-21  Lauri Alanko  <la@iki.fi>

	* Added vfunc wrappers and accessors
	
1998-10-21  Lauri Alanko  <la@iki.fi>

	* Initially committed to CVS